test/Fail/Issue5055.err
Issue5055.agda:10.19: error: [ParseError]
Illegal pattern synonym argument  _ @ (s , v)
(Arguments to pattern synonyms cannot be patterns themselves.)
